Prepared for modularization